--- a/parallel_data/preprocess.ipynb
+++ b/parallel_data/preprocess.ipynb
@@ -1,48 +1,19 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "if args.lang == 'de':\n",
-    "    model_name = 'deepset/gbert-base'\n",
-    "\n",
-    "elif args.lang == 'ja':\n",
-    "    model_name = 'cl-tohoku/bert-base-japanese-whole-word-masking'\n",
-    "\n",
-    "elif args.lang == 'ar':\n",
-    "    model_name = 'aubmindlab/bert-base-arabertv02'\n",
-    "\n",
-    "elif args.lang == 'es':\n",
-    "    model_name = 'dccuchile/bert-base-spanish-wwm-uncased'\n",
-    "\n",
-    "elif args.lang == 'pt':\n",
-    "    model_name = 'neuralmind/bert-base-portuguese-cased'\n",
-    "\n",
-    "elif args.lang == 'ru':\n",
-    "    model_name = 'blinoff/roberta-base-russian-v0'\n",
-    "\n",
-    "elif args.lang == 'id':\n",
-    "    model_name = 'cahya/bert-base-indonesian-1.5G'\n",
-    "\n",
-    "elif args.lang == 'zh':\n",
-    "    model_name = 'hfl/chinese-bert-wwm-ext'\n",
-    "\n",
-    "elif args.lang == 'multi-xlm':\n",
-    "    model_name = 'xlm-mlm-100-1280'\n",
-    "    \n",
-    "elif args.lang == 'multi-bert':\n",
-    "\n",
-    "\n",
-    "Dataset source: https://hatespeechdata.com/"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cass/.local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -63,54 +34,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for spanish\n",
     "# dataset_name = \"Paul/hatecheck-spanish\"\n",
-    "dataset_name = \"Paul/hatecheck-portuguese\"\n",
+    "# dataset_name = \"Paul/hatecheck-portuguese\"\n",
     "# dataset_name = \"Paul/hatecheck-german\"\n",
     "# dataset_name = \"Paul/hatecheck-italian\"\n",
     "# dataset_name = \"flax-sentence-embeddings/Gender_Bias_Evaluation_Set\"\n",
-    "lang = 'pt'"
+    "\n",
+    "dataset_name = \"piuba-bigdata/contextualized_hate_speech\"\n",
+    "lang = 'es'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration Paul--hatecheck-portuguese-beb1288febbedace\n",
-      "Found cached dataset csv (C:/Users/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-portuguese-beb1288febbedace/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+      "Found cached dataset parquet (/home/cass/.cache/huggingface/datasets/piuba-bigdata___parquet/piubamas--contextualized_hate_speech-c08e1901e40a0438/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Dataset({\n",
-       "    features: ['mhc_case_id', 'functionality', 'test_case', 'label_gold', 'target_ident', 'ref_case_id', 'ref_templ_id', 'templ_id', 'case_templ', 'gender_male', 'gender_female', 'label_annotated', 'label_annotated_maj', 'disagreement_in_case', 'disagreement_in_template'],\n",
-       "    num_rows: 3691\n",
-       "})"
+       "{'id': 343726,\n",
+       " 'title': 'Video: salió de la cárcel por el coronavirus y murió de un tiro el mismo día al festejar su libertad',\n",
+       " 'text': '@usuario Uno menos',\n",
+       " 'context_tweet': 'Video: salió de la cárcel por el coronavirus y murió de un tiro el mismo día al festejar su libertad https://t.co/UrJGRAdEvD',\n",
+       " 'HATEFUL': 1,\n",
+       " 'body': 'Un hombre de 46 años, que cumplía una condena en prisión y fue puesto en libertad por el coronavirus, murió el mismo día que dejó la cárcel baleado por un primo, durante los \"festejos\" por dejar la prisión.\\n\\nSari Salem Wardat, de 46 años, recibió un disparo desde atrás en un aparente accidente mientras caminaba hacia miembros de la familia y vecinos que se habían reunido para darle la bienvenida a su casa, en Jordania.\\n\\nUn video que circuló en las redes sociales \\u200bmuestra a Sari llegando a su casa en un auto azul rodeado de tiros de \"celebración\". El primo se acerca de inmediato a Sari, que sostiene una pistola y la apunta hacia el cielo.\\n\\nEl detenido liberado, al lado de la puerta del acompañante, mira a su primo quien \"festeja\" la liberación.\\n\\nMirá también Mirá también El increíble video de unos monos que se tiran a la pileta como Charly García\\n\\nEl arma parece trabarse dos veces antes de que el primo dispare siete tiros al aire mientras Sari camina hacia las personas reunidas en la calle. Luego, el arma se traba una vez más y allí el preso liberado recibe un tiro accidental en la cabeza.\\n\\nSari había estado cumpliendo una condena de ocho meses de prisión por portar un arma sin licencia y resistir el arresto, pero también se cree que era un traficante de drogas y un contrabandista. Fue puesto en libertad dos semanas antes del final de su condena como parte de las medidas gubernamentales de Jordania para prevenir la propagación del coronavirus.',\n",
+       " 'CALLS': 0,\n",
+       " 'WOMEN': 0,\n",
+       " 'LGBTI': 0,\n",
+       " 'RACISM': 0,\n",
+       " 'CLASS': 0,\n",
+       " 'POLITICS': 0,\n",
+       " 'DISABLED': 0,\n",
+       " 'APPEARANCE': 0,\n",
+       " 'CRIMINAL': 1}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = load_dataset(dataset_name, split=\"test\")  #, split=\"test\"\n",
-    "dataset"
+    "dataset = load_dataset(dataset_name, split=\"train\")  #, split=\"test\"\n",
+    "dataset[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,6 +121,39 @@
     "    return idt_list\n",
     "\n",
     "idt_list = get_idt(lang)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hate = []\n",
+    "nonhate = []\n",
+    "for i in dataset:\n",
+    "    if i['HATEFUL'] == 1:\n",
+    "        hate.append(i['text'])\n",
+    "    else:\n",
+    "        nonhate.append(i['text'])\n",
+    "\n",
+    "\n",
+    "hate_idt = []\n",
+    "hate_nonidt = []\n",
+    "for i in hate:\n",
+    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "        hate_idt.append(i)\n",
+    "    else:\n",
+    "        hate_nonidt.append(i) # hate without idt / non hate with idt\n",
+    "\n",
+    "\n",
+    "nonhate_idt = []\n",
+    "nonhate_nonidt = []\n",
+    "for i in nonhate:\n",
+    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "        nonhate_idt.append(i)\n",
+    "    else:\n",
+    "        nonhate_nonidt.append(i) # hate without idt / non hate with idt"
    ]
   },
   {
@@ -171,6 +187,26 @@
     "        nonhate_idt.append(i)\n",
     "    else:\n",
     "        nonhate_nonidt.append(i) # hate without idt / non hate with idt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(f\"./hateB/{lang}/hate_idt.json\", 'w') as f:\n",
+    "    json.dump(hate_idt, f, indent=4) \n",
+    "\n",
+    "with open(f\"./hateB/{lang}/hate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(hate_nonidt, f, indent=4) \n",
+    "\n",
+    "with open(f\"./hateB/{lang}/nonhate_idt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_idt, f, indent=4) \n",
+    "\n",
+    "with open(f\"./hateB/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_nonidt, f, indent=4) "
    ]
   },
   {
@@ -388,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
