--- a/parallel_data/get_data.ipynb
+++ b/parallel_data/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,58 +33,38 @@
     "# dataset_name = \"piuba-bigdata/contextualized_hate_speech\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-portuguese\"\n",
-    "dataset_name = \"hate_speech_portuguese\"\n",
+    "# dataset_name = \"hate_speech_portuguese\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-german\"\n",
     "# dataset_name = \"Paul/hatecheck-italian\"\n",
     "# dataset_name = \"flax-sentence-embeddings/Gender_Bias_Evaluation_Set\"\n",
     "\n",
+    "# dataset_name = \"Paul/hatecheck-arabic\"\n",
     "\n",
-    "lang = 'pt'"
+    "# dataset_name = \"Paul/hatecheck-french\"\n",
+    "\n",
+    "# dataset_name = \"Paul/hatecheck-mandarin\"\n",
+    "\n",
+    "# dataset_name = \"Paul/hatecheck-dutch\"\n",
+    "# dataset_name = \"Paul/hatecheck-polish\"\n",
+    "dataset_name = \"Paul/hatecheck-hindi\"\n",
+    "lang = 'hi'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06c58ad3ed3b440a95f28a9da33069be",
+       "model_id": "2c4021910c1a4f8ea6a7282997393102",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Downloading builder script:   0%|          | 0.00/5.29k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14a381c66c5a494a9d3f88680a5b9a9c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading metadata:   0%|          | 0.00/3.57k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47275414a3764024aadfbea054b0b98d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/3.54k [00:00<?, ?B/s]"
+       "Downloading readme:   0%|          | 0.00/3.49k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -94,18 +74,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset hate_speech_portuguese/default to /home/cass/.cache/huggingface/datasets/hate_speech_portuguese/default/1.0.0/20ad7529b5939c566862ef7d6753aa52f92c45aed182decf84abec62c7894062...\n"
+      "Downloading and preparing dataset csv/Paul--hatecheck-hindi to /home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-hindi-60f44ba8a89cfbc7/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4527e6957e3641699267adef1839d7f6",
+       "model_id": "a5cf3e564871400f86c3f6413b670147",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Downloading data:   0%|          | 0.00/304k [00:00<?, ?B/s]"
+       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -114,12 +94,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec21b221054c4834bac0f0a183bc8f6e",
+       "model_id": "737848ccd0fe4b85a281d204d306f676",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating train split:   0%|          | 0/5670 [00:00<?, ? examples/s]"
+       "Downloading data:   0%|          | 0.00/859k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b29dec407b349c29a63e3218fb8fab3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd3bf03eca3b4ac5bc7ab711b08dd0a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -129,35 +137,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset hate_speech_portuguese downloaded and prepared to /home/cass/.cache/huggingface/datasets/hate_speech_portuguese/default/1.0.0/20ad7529b5939c566862ef7d6753aa52f92c45aed182decf84abec62c7894062. Subsequent calls will reuse this data.\n"
+      "Dataset csv downloaded and prepared to /home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-hindi-60f44ba8a89cfbc7/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'text': '@__andrea__b \\nO cara vive em outro mundo\\nNão no mundo real\\nREFUGIADOS são os que vivem\\nNas favelas vizinhas as suas fortalezas',\n",
-       " 'label': 1,\n",
-       " 'hatespeech_G1': '1',\n",
-       " 'annotator_G1': 'A',\n",
-       " 'hatespeech_G2': '1',\n",
-       " 'annotator_G2': 'V',\n",
-       " 'hatespeech_G3': '0',\n",
-       " 'annotator_G3': 'E'}"
+       "{'mhc_case_id': 'hindi-1',\n",
+       " 'functionality': 'derog_neg_emote_h',\n",
+       " 'test_case': 'mujhe aurato se nafrat hai.',\n",
+       " 'label_gold': 'hateful',\n",
+       " 'target_ident': 'women',\n",
+       " 'ref_case_id': None,\n",
+       " 'ref_templ_id': None,\n",
+       " 'templ_id': 1,\n",
+       " 'case_templ': 'mujhe [IDENT_P] se nafrat hai.',\n",
+       " 'gender_male': None,\n",
+       " 'gender_female': None,\n",
+       " 'label_annotated': \"['hateful', 'hateful', 'hateful']\",\n",
+       " 'label_annotated_maj': 'hateful',\n",
+       " 'disagreement_in_case': False,\n",
+       " 'disagreement_in_template': False}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = load_dataset(dataset_name, split=\"train\")  #, split=\"test\"\n",
+    "dataset = load_dataset(dataset_name, split=\"test\")  #, split=\"test\"\n",
     "dataset[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +201,9 @@
     "        idt_list = ['穆斯林', '犹太', '犹太人', '白人', '伊斯兰', '黑人', '女', '白人', '工党', '真主', '犹太教', '拉拉', '变性', '种族', '棕色', '墨西哥', '宗教', '同性', '同性恋', '非洲人']\n",
     "    elif lang == 'ar':\n",
     "        idt_list = [\"الله\" ,\"اليهود\" ,\"السحاقيات\" ,\"المتحولين جنسياً\" ,\"العرق\" ,\"البني\" ,\"المرأة\" ,\"المكسيكي\" ,\"الدين\" ,\"مثلي الجنس\" ,\"الشذوذ الجنسي\" ,\"الأفارقة\"]\n",
+    "    elif lang == 'hi':\n",
+    "        idt_list = ['मुस्लिम', 'यहूदी', 'यहूदी', 'श्वेत', 'इस्लाम', 'अश्वेत', 'मुस्लिम', 'महिलाएं', 'गोरे', 'समलैंगिक', 'काला', 'डेमोकैट', 'इस्लामिक', 'अल्लाह', 'यहूदी', 'लेस्बियन', 'ट्रांसजेंडर', 'जाति', 'भूरा', 'महिला', 'मैक्सिकन', 'धर्म', 'समलैंगिक', 'समलैंगिकता', 'अफ्रीकी']\n",
+    "    \n",
     "    return idt_list\n",
     "\n",
     "idt_list = get_idt(lang)"
@@ -193,40 +211,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hate = []\n",
-    "nonhate = []\n",
-    "for i in dataset:\n",
-    "    if i['label'] == 1:\n",
-    "        hate.append(i['text'])\n",
-    "    else:\n",
-    "        nonhate.append(i['text'])\n",
+    "# hate = []\n",
+    "# nonhate = []\n",
+    "# for i in dataset:\n",
+    "#     if i['label'] == 1:\n",
+    "#         hate.append(i['text'])\n",
+    "#     else:\n",
+    "#         nonhate.append(i['text'])\n",
     "\n",
     "\n",
-    "hate_idt = []\n",
-    "hate_nonidt = []\n",
-    "for i in hate:\n",
-    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "        hate_idt.append(i)\n",
-    "    else:\n",
-    "        hate_nonidt.append(i) # hate without idt / non hate with idt\n",
+    "# hate_idt = []\n",
+    "# hate_nonidt = []\n",
+    "# for i in hate:\n",
+    "#     if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "#         hate_idt.append(i)\n",
+    "#     else:\n",
+    "#         hate_nonidt.append(i) # hate without idt / non hate with idt\n",
     "\n",
     "\n",
-    "nonhate_idt = []\n",
-    "nonhate_nonidt = []\n",
-    "for i in nonhate:\n",
-    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "        nonhate_idt.append(i)\n",
-    "    else:\n",
-    "        nonhate_nonidt.append(i) # hate without idt / non hate with idt"
+    "# nonhate_idt = []\n",
+    "# nonhate_nonidt = []\n",
+    "# for i in nonhate:\n",
+    "#     if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "#         nonhate_idt.append(i)\n",
+    "#     else:\n",
+    "#         nonhate_nonidt.append(i) # hate without idt / non hate with idt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,42 +277,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "with open(f\"./hateB/{lang}/hate_idt.json\", 'w') as f:\n",
-    "    json.dump(hate_idt, f, indent=4) \n",
+    "# import json\n",
+    "# with open(f\"./hateB/{lang}/hate_idt.json\", 'w') as f:\n",
+    "#     json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
     "\n",
-    "with open(f\"./hateB/{lang}/hate_nonidt.json\", 'w') as f:\n",
-    "    json.dump(hate_nonidt, f, indent=4) \n",
+    "# with open(f\"./hateB/{lang}/hate_nonidt.json\", 'w') as f:\n",
+    "#     json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
     "\n",
-    "with open(f\"./hateB/{lang}/nonhate_idt.json\", 'w') as f:\n",
-    "    json.dump(nonhate_idt, f, indent=4) \n",
+    "# with open(f\"./hateB/{lang}/nonhate_idt.json\", 'w') as f:\n",
+    "#     json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
     "\n",
-    "with open(f\"./hateB/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
-    "    json.dump(nonhate_nonidt, f, indent=4) "
+    "# with open(f\"./hateB/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
+    "#     json.dump(nonhate_nonidt, f, indent=4, ensure_ascii=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(f\"{lang}/hate_idt.json\", 'w') as f:\n",
-    "    json.dump(hate_idt, f, indent=4) \n",
+    "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
+    "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
     "\n",
-    "with open(f\"{lang}/hate_nonidt.json\", 'w') as f:\n",
-    "    json.dump(hate_nonidt, f, indent=4) \n",
+    "with open(f\"./hate/{lang}/hate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
     "\n",
-    "with open(f\"{lang}/nonhate_idt.json\", 'w') as f:\n",
-    "    json.dump(nonhate_idt, f, indent=4) \n",
+    "with open(f\"./hate/{lang}/nonhate_idt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
     "\n",
-    "with open(f\"{lang}/nonhate_nonidt.json\", 'w') as f:\n",
-    "    json.dump(nonhate_nonidt, f, indent=4) "
+    "with open(f\"./hate/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_nonidt, f, indent=4, ensure_ascii=False) "
    ]
   },
   {
@@ -327,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
