--- a/parallel_data/get_data.ipynb
+++ b/parallel_data/get_data.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cass/.local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -34,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_name = \"Paul/hatecheck\"\n",
+    "# dataset_name = \"Paul/hatecheck\"\n",
     "\n",
-    "# dataset_name = \"Paul/hatecheck-spanish\"\n",
+    "dataset_name = \"Paul/hatecheck-spanish\"\n",
     "# dataset_name = \"piuba-bigdata/contextualized_hate_speech\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-portuguese\"\n",
@@ -59,24 +50,77 @@
     "# dataset_name = \"Paul/hatecheck-polish\"\n",
     "# dataset_name = \"Paul/hatecheck-hindi\"\n",
     "\n",
-    "lang = 'en'"
+    "lang = 'es'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'load_dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataset \u001b[39m=\u001b[39m load_dataset(dataset_name, split\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m\"\u001b[39m)  \u001b[39m#, split=\"test\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m dataset[\u001b[39m0\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'load_dataset' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading readme: 100%|██████████| 3.49k/3.49k [00:00<00:00, 1.97MB/s]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset csv/Paul--hatecheck-spanish to /home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-spanish-8297884bca10d574/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading data: 100%|██████████| 1.07M/1.07M [00:00<00:00, 1.63MB/s]\n",
+      "Downloading data files: 100%|██████████| 1/1 [00:01<00:00,  1.93s/it]\n",
+      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 1817.29it/s]\n",
+      "Generating test split: 0 examples [00:00, ? examples/s]/home/cass/anaconda3/envs/eva/lib/python3.11/site-packages/datasets/download/streaming_download_manager.py:776: FutureWarning: the 'mangle_dupe_cols' keyword is deprecated and will be removed in a future version. Please take steps to stop the use of 'mangle_dupe_cols'\n",
+      "  return pd.read_csv(xopen(filepath_or_buffer, \"rb\", use_auth_token=use_auth_token), **kwargs)\n",
+      "                                                       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset csv downloaded and prepared to /home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-spanish-8297884bca10d574/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mhc_case_id': 'spanish-1',\n",
+       " 'functionality': 'derog_neg_emote_h',\n",
+       " 'test_case': 'Odio a los negros.',\n",
+       " 'label_gold': 'hateful',\n",
+       " 'target_ident': 'black people',\n",
+       " 'ref_case_id': None,\n",
+       " 'ref_templ_id': None,\n",
+       " 'templ_id': 1,\n",
+       " 'case_templ': None,\n",
+       " 'gender_male': 'Odio a los [male_IDENT_P].',\n",
+       " 'gender_female': 'Odio a las [female_IDENT_P].',\n",
+       " 'label_annotated': \"['hateful', 'hateful', 'hateful']\",\n",
+       " 'label_annotated_maj': 'hateful',\n",
+       " 'disagreement_in_case': False,\n",
+       " 'disagreement_in_template': False}"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -86,69 +130,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m idt_list \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m dataset:\n\u001b[1;32m      4\u001b[0m     \u001b[39mif\u001b[39;00m i[\u001b[39m'\u001b[39m\u001b[39mlabel_gold\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhateful\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      5\u001b[0m         idt \u001b[39m=\u001b[39m i[\u001b[39m'\u001b[39m\u001b[39mtarget_ident\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39msplit()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "idt_list = []\n",
-    "\n",
-    "for i in dataset:\n",
-    "    if i['label_gold'] == 'hateful':\n",
-    "        idt = i['target_ident'].split()\n",
-    "        idt_list.append(w for w in idt not in set(idt_list))\n",
-    "        \n",
-    "idt_list\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['gay people',\n",
-       " 'immigrants',\n",
-       " 'women',\n",
-       " 'Muslims',\n",
-       " 'trans people',\n",
-       " 'disabled people',\n",
-       " 'black people']"
+       "['black', 'gay', 'trans', 'indigenous', 'jews', 'disabled', 'women']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "idt_list = []\n",
+    "sentence_example = []\n",
     "\n",
     "for i in dataset:\n",
     "    if i['label_gold'] == 'hateful':\n",
-    "        idt_list.append(i['target_ident'])\n",
+    "        idt = i['target_ident'].split()\n",
+    "        for w in idt:\n",
+    "            if w not in idt_list:\n",
+    "                idt_list.append(w)\n",
+    "                sentence_example.append(i['test_case'])\n",
+    "       \n",
+    "        \n",
     "\n",
-    "idt_list = list(set(idt_list))\n",
-    "idt_list"
+    "idt_list.remove('people')\n",
+    "idt_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Odio a los negros.',\n",
+       " 'Odio a los negros.',\n",
+       " 'Odio a los gays.',\n",
+       " 'Odio a los trans.',\n",
+       " 'Odio a los indígenas.',\n",
+       " 'Odio a los judíos.',\n",
+       " 'Odio a los discapacitados.',\n",
+       " 'Odio a las mujeres.']"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import sys\n",
+    "\n",
+    "logging.basicConfig(filename=f'./hate/{lang}/identity_terms.txt',level=logging.info)\n",
+    "\n",
+    "logging.info(sentence_example)\n",
+    "logging.info(idt_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idt_list = ['trans', 'gay', 'disabili', 'musulmani', 'immigrati', 'donne', 'neri', 'persone di colore']\n",
+    "logging.info(idt_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.DataFrame(list(zip(idt_list, sentence_example)),\n",
+    "#                columns =['Identity terms', 'Sentences'])\n",
+    "# df.to_csv(f'./hate/{lang}/identity_terms.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hate = []\n",
+    "nonhate = []\n",
+    "for i in dataset:\n",
+    "    if i['label_gold'] == 'hateful':\n",
+    "        hate.append(i['test_case'])\n",
+    "    else:\n",
+    "        nonhate.append(i['test_case'])\n",
+    "\n",
+    "\n",
+    "hate_idt = []\n",
+    "hate_nonidt = []\n",
+    "for i in hate:\n",
+    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "        hate_idt.append(i)\n",
+    "    else:\n",
+    "        hate_nonidt.append(i) # hate without idt / non hate with idt\n",
+    "\n",
+    "\n",
+    "nonhate_idt = []\n",
+    "nonhate_nonidt = []\n",
+    "for i in nonhate:\n",
+    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "        nonhate_idt.append(i)\n",
+    "    else:\n",
+    "        nonhate_nonidt.append(i) # hate without idt / non hate with idt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
+    "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "with open(f\"./hate/{lang}/hate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "with open(f\"./hate/{lang}/nonhate_idt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "with open(f\"./hate/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_nonidt, f, indent=4, ensure_ascii=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# with open(f\"./hateB/{lang}/hate_idt.json\", 'w') as f:\n",
+    "#     json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "# with open(f\"./hateB/{lang}/hate_nonidt.json\", 'w') as f:\n",
+    "#     json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "# with open(f\"./hateB/{lang}/nonhate_idt.json\", 'w') as f:\n",
+    "#     json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "# with open(f\"./hateB/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
+    "#     json.dump(nonhate_nonidt, f, indent=4, ensure_ascii=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hate = []\n",
+    "# nonhate = []\n",
+    "# for i in dataset:\n",
+    "#     if i['label'] == 1:\n",
+    "#         hate.append(i['text'])\n",
+    "#     else:\n",
+    "#         nonhate.append(i['text'])\n",
+    "\n",
+    "\n",
+    "# hate_idt = []\n",
+    "# hate_nonidt = []\n",
+    "# for i in hate:\n",
+    "#     if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "#         hate_idt.append(i)\n",
+    "#     else:\n",
+    "#         hate_nonidt.append(i) # hate without idt / non hate with idt\n",
+    "\n",
+    "\n",
+    "# nonhate_idt = []\n",
+    "# nonhate_nonidt = []\n",
+    "# for i in nonhate:\n",
+    "#     if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
+    "#         nonhate_idt.append(i)\n",
+    "#     else:\n",
+    "#         nonhate_nonidt.append(i) # hate without idt / non hate with idt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,141 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hate = []\n",
-    "# nonhate = []\n",
-    "# for i in dataset:\n",
-    "#     if i['label'] == 1:\n",
-    "#         hate.append(i['text'])\n",
-    "#     else:\n",
-    "#         nonhate.append(i['text'])\n",
-    "\n",
-    "\n",
-    "# hate_idt = []\n",
-    "# hate_nonidt = []\n",
-    "# for i in hate:\n",
-    "#     if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "#         hate_idt.append(i)\n",
-    "#     else:\n",
-    "#         hate_nonidt.append(i) # hate without idt / non hate with idt\n",
-    "\n",
-    "\n",
-    "# nonhate_idt = []\n",
-    "# nonhate_nonidt = []\n",
-    "# for i in nonhate:\n",
-    "#     if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "#         nonhate_idt.append(i)\n",
-    "#     else:\n",
-    "#         nonhate_nonidt.append(i) # hate without idt / non hate with idt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hate = []\n",
-    "nonhate = []\n",
-    "for i in dataset:\n",
-    "    if i['label_gold'] == 'hateful':\n",
-    "        hate.append(i['test_case'])\n",
-    "    else:\n",
-    "        nonhate.append(i['test_case'])\n",
-    "\n",
-    "\n",
-    "hate_idt = []\n",
-    "hate_nonidt = []\n",
-    "for i in hate:\n",
-    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "        hate_idt.append(i)\n",
-    "    else:\n",
-    "        hate_nonidt.append(i) # hate without idt / non hate with idt\n",
-    "\n",
-    "\n",
-    "nonhate_idt = []\n",
-    "nonhate_nonidt = []\n",
-    "for i in nonhate:\n",
-    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "        nonhate_idt.append(i)\n",
-    "    else:\n",
-    "        nonhate_nonidt.append(i) # hate without idt / non hate with idt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import json\n",
-    "# with open(f\"./hateB/{lang}/hate_idt.json\", 'w') as f:\n",
-    "#     json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
-    "\n",
-    "# with open(f\"./hateB/{lang}/hate_nonidt.json\", 'w') as f:\n",
-    "#     json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
-    "\n",
-    "# with open(f\"./hateB/{lang}/nonhate_idt.json\", 'w') as f:\n",
-    "#     json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
-    "\n",
-    "# with open(f\"./hateB/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
-    "#     json.dump(nonhate_nonidt, f, indent=4, ensure_ascii=False) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
-    "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
-    "\n",
-    "with open(f\"./hate/{lang}/hate_nonidt.json\", 'w') as f:\n",
-    "    json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
-    "\n",
-    "with open(f\"./hate/{lang}/nonhate_idt.json\", 'w') as f:\n",
-    "    json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
-    "\n",
-    "with open(f\"./hate/{lang}/nonhate_nonidt.json\", 'w') as f:\n",
-    "    json.dump(nonhate_nonidt, f, indent=4, ensure_ascii=False) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
